--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "2.8.0",
+    "react-datepicker": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
