--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "2.8.0",
     "react-datepicker": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.45.4",
     "react-redux": "8.1.2",
     "react-router-dom": "6.15.0",
     "react-scripts": "5.0.1",
